--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon api/app.js"
+    "dev": "nodemon api/app.js",
+    "dbmigrate" : "node api/libs/sync.js"
   },
   "keywords": [],
   "author": "",
